Fix overflow / box sizing css issues

--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -23,7 +23,7 @@
     background-repeat: no-repeat;
     background-position: top center;
     z-index: 10;
-    margin: -60px;
+    margin-bottom: -60px;
   }
   &-content {
     width: 100%;
@@ -212,13 +212,12 @@
     &-background {
       position: absolute;
       top: 60px;
-      width: 100%;
+      width: calc(100vw - 15px);
       height: 540px;
       z-index: -200;
-      background-size: cover;
+      background-size: 120%;
       background-position: top center;
       filter: blur(15px) brightness(1.1) saturate(0.9);
-      transform: scale(2);
       &-boundary {
         display: block;
         width: 100%;
@@ -266,7 +265,7 @@
         overflow: hidden;
       }
       &-info-container {
-        width: 33.33%;
+        width: 33.4%;
         background-color: rgba(255, 255, 255, 0.9);
         border-bottom: 1px solid $lighter-grey;
         padding: 25px 30px;
