--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,8 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 0 auto;
-    width: 100vw;
+    margin: 0;
     box-sizing: content-box;
     height: 60px;
     line-height: 1.2em;
